<resources>
    <string name="app_name">Darbas3</string>
    <string name="_2">2</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="m">M+</string>
    <string name="m_minus">M-</string>
    <string name="delete">⌫</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="plus_minus">±</string>
    <string name="sqrt">√</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="division">/</string>
    <string name="percent">%</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiplication">*</string>
    <string name="_1_x">1/x</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
</resources>